--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nivo/pie": "^0.84.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@vercel/analytics": "^1.1.1",
     "@web3modal/ethers5": "^3.4.0",
     "next": "14.0.4",
     "react": "^18.2.0",
