--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     ".next/types/**/*.tsx",
     "./src/**/*.ts",
     "./src/**/*.tsx",
-    "./src/**/*.js",
+    "./src/**/*.js"
   ],
   "exclude": ["node_modules"]
 }
