--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_VICTION_URL='https://rpc.viction.xyz'
-NEXT_PUBLIC_ARBITRUM_URL=YOUR_RPC_URL
+NEXT_PUBLIC_VICTION_URL='https://rpc-testnet.viction.xyz'
+NEXT_PUBLIC_ARBITRUM_URL='https://sepolia-rollup.arbitrum.io/rpc'
 NEXT_PUBLIC_PROJECT_ID=YOUR_PROJECT_ID
